// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectStatus defaults to unknown state 1`] = `
<FetchContextProvider>
  <EditorContextProvider>
    <ObjectStatus
      pid="foo:123"
    >
      <ObjectLoader
        pid="foo:123"
      />
      <button
        className="unknown"
        onClick={[Function]}
      >
        <span
          className="indicator"
        >
          ◉
        </span>
         
        Unknown
      </button>
    </ObjectStatus>
  </EditorContextProvider>
</FetchContextProvider>
`;

exports[`ObjectStatus displays the state found in the response 1`] = `
<FetchContextProvider>
  <EditorContextProvider>
    <ObjectStatus
      pid="foo:123"
    >
      <ObjectLoader
        pid="foo:123"
      />
      <button
        className="inactive"
        onClick={[Function]}
      >
        <span
          className="indicator"
        >
          ◉
        </span>
         
        Inactive
      </button>
    </ObjectStatus>
  </EditorContextProvider>
</FetchContextProvider>
`;
